# get_weather

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  consts.py  main.py  pyproject.toml  weather.xlsx
db/: db_models.py
migration/: env.py
migration/versions/: 63fd9802c4d3_initial.py
